alertmanager_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanger-ch3-01
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    traefik.frontend.entryPoints: https
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "traefik-auth"
spec:
  rules:
  - host: <<host>>
    http:
      paths: 
      - path: /alertmanager-ch3-01
        backend:
          serviceName: alertmanager-ch3-01
          servicePort: 9093
