prometheus_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ch3-01
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
    traefik.frontend.entryPoints: https
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "traefik-auth"
spec:
  rules:
  - host: <<hosts>>
    http:
      paths: 
      - path: /
        backend:
          serviceName: prometheus-ch3-01
          servicePort: 9090
